## Process this file with automake to produce Makefile.in

## Global options
INCLUDES=-I@top_srcdir@/NVClasses-0.9.1

## Libraries
noinst_LIBRARIES = libnserver.a

## libnserver
libnserver_a_SOURCES =		ActiveDB.cc\
	ActiveDB.h\
	Article.cc\
	Article.h\
	ArtSpooler.cc\
	ArtSpoller.h\
	CNewsgroup.cc\
	CNewsgroup.h\
	GroupInfo.cc\
	GroupInfo.h\
	Lexer.cc\
	Lexer.h\
	MPList.cc\
	MPList.h\
	NSError.h\
	NServer.cc\
	NServer.h\
	NVActiveDB.cc\
	NVActiveDB.h\
	NVNewsgroup.cc\
	NVNewsgroup.h\
	Newsgroup.cc\
	Newsgroup.h\
	NewsgroupFilter.cc\
	NewsgroupFilter.h\
	ObjLock.cc\
	ObjLock.h\
	OverviewFmt.cc\
	OverviewFmt.h\
	RNewsgroup.cc\
	RNewsgroup.h\
	VirtualIterator.h\
	sstream.cc\
	sstream.h\
	util.cc\
	util.h\
	readline.cc\
	readline.h\
	wildmat.c\
	wildmat.h

## sub directories
SUBDIRS = checks
