## Process this file with automake to produce Makefile.in
info_TEXINFOS = NewsCache.texinfo

EXTRA_DIST =
	draft-ietf-nntpext-base-04.txt \
	draft-ietf-nntpext-imp-02.txt \
	newscache-coredump.txt \
	newscache-debugging.txt \
	newscache-pam.txt \
	newscache-stunnel-ssl.txt \
	rfc1036.txt \
	rfc2980.txt \
	rfc977.txt
